--- a/index.html
+++ b/index.html
@@ -1,61 +1,94 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <title>HTML Parser</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-    <style>
-      textarea {display:block;width:100%;height:100px;}
-      iframe {width:100%;height:300px;}
-    </style>
-    <script>
-      document.addEventListener("DOMContentLoaded", function() {
+<html>
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-       document.getElementById("process").addEventListener("click", function () {
+  <title>HTML Parser</title>
 
-        var $iframe = document.getElementById("iframe-render"),
-            iframe, iframeDoc;
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.1/css/fontawesome.min.css">
 
-        if ( !$iframe ) {
-          iframe = document.createElement("iframe");
-          iframe.id = "iframe-render";
+  <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+  <!-- Leave those next 4 lines if you care about users using IE8 -->
+  <!--[if lt IE 9]>
+  <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+  <![endif]-->
+  <script>
+    function injectHTML() {
+      var iframe = document.getElementById('iframe-body');
+      var html_string = document.getElementById("core_input").value
+      var iframedoc = iframe.document;
+      if (iframe.contentDocument)
+        iframedoc = iframe.contentDocument;
+      else if (iframe.contentWindow)
+        iframedoc = iframe.contentWindow.document;
 
-          document.getElementById("iframe-body").appendChild( iframe );
-        } else {
-          iframe = $iframe;
-        }
-
-
-        iframeDoc = iframe.contentWindow ?
-                      iframe.contentWindow :
-                      iframe.contentDocument.document ?
-                        iframe.contentDocument.document :
-                        iframe.contentDocument;
-
-        iframeDoc.document.open();
-        iframeDoc.document.write(
-            document.getElementById("core_input").value
-        );
-        iframeDoc.document.close();
-
-       }, false);
-      }, false);
-    </script>
-  </head>
+      if (iframedoc) {
+        // Put the content in the iframe
+        iframedoc.open();
+        iframedoc.writeln(html_string);
+        iframedoc.close();
+      } else {
+        //just in case of browsers that don't support the above 3 properties.
+        //fortunately we don't come across such case so far.
+        alert('Cannot inject dynamic contents into iframe.');
+      }
+    }
+  </script>
+</head>
 <body>
+
+<!-- Navigation -->
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top">
   <div class="container">
-    <h2>HTML Parser</h2>
-    <div class="panel panel-default">
-      <div class="panel-body">
-          <textarea class="form-control" rows="5" id="core_input">
-            <script type="text/javascript"> var foo = "test"; </script>
-          </textarea>
-          <button type="button" class="btn btn-primary" id="process">process</button>
-      </div>
-      <div class="panel-body">
-        <div id="iframe-body"></div>
-        </div>
+    <a class="navbar-brand" href="#">HTML Parser</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
+            aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarResponsive">
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item active">
+          <a class="nav-link" href="#">Home
+            <span class="sr-only">(current)</span>
+          </a>
+        </li>
+      </ul>
     </div>
+  </div>
+</nav>
+
+<!-- Page Content -->
+<div class="container">
+  <div class="row" style="padding-bottom: 10px">
+    <div class="col-lg-12 text-center">
+      <h3 class="mt-5">Preview your HTML code</h3>
+    </div>
+    <div class="input-group">
+      <div class="input-group-prepend">
+        <span class="input-group-text">Paste HTML Here</span>
+      </div>
+      <textarea id="core_input" class="form-control" aria-label="With textarea"></textarea>
+    </div>
+  </div>
+  <div class="row" style="padding-bottom: 10px">
+    <div class="input-group-append">
+      <button id="process" class="btn btn-primary" onClick="javascript:injectHTML();">Generate Preview</button>
+    </div>
+  </div>
+  <div class="row">
+    <div class="embed-responsive embed-responsive-16by9" style="border: darkgrey; border-style: solid; border-width: 1px">
+      <iframe id="iframe-body" class="embed-responsive-item" src="about:blank"></iframe>
+    </div>
+  </div>
+</div>
+
+<!-- Including Bootstrap JS (with its jQuery dependency) so that dynamic components work -->
+<script src="https://code.jquery.com/jquery-1.12.4.min.js"
+        integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 </body>
 </html>
